data/derived/comb/progs/unify/prog4301.ml.out
Characters 32-56:
  let rec fixpoint (f,b) = wwhile(fixpoint(f, f b)*f b = b, b);;
                                  ^^^^^^^^^^^^^^^^^^^^^^^^
Error: This expression has type bool but an expression was expected of type
         'a -> 'a * bool
